classDiagram
    class IFileService {
        <<interface>>
        +abstract SaveDiagramAsync(DiagramGenerationResult result) Task
        +abstract OpenFileAsync(String filePath) Task
    }
    class Generate3DDiagramCommand {
        +static Generate3DDiagramCommand Instance
        +static async InitializeAsync(AsyncPackage package) Task
    }
    class IDiagramGenerationService {
        <<interface>>
        +abstract GenerateAsync(SelectedItem selectedItem) Task
    }
    class DiagramGenerationService {
        +async GenerateAsync(SelectedItem selectedItem) Task
    }
    class WorkspaceService {
        +async GetWorkspaceAsync() Task
        +async GetProjectByPathAsync(String projectPath) Task
        +async GetProjectByNameAsync(String projectName) Task
        +async GetDocumentByPathAsync(String documentPath) Task
        +async GetAllCSharpProjectsAsync() Task
    }
    class MermaidGenerator {
        +Generate(List types) String
    }
    class CodeProcessor {
        +ProcessProject() Void
        +ProcessSolution() Void
        +ProcessSingleFile() Void
    }
    class IDialogService {
        <<interface>>
        +abstract ShowErrorAsync(String message) Task
        +abstract ShowInfoAsync(String message) Task
        +abstract ShowDiagramInfoAsync(DiagramGenerationResult result, String filePath) Task
    }
    class FileService {
        +async SaveDiagramAsync(DiagramGenerationResult result) Task
        +async OpenFileAsync(String filePath) Task
    }
    class DialogService {
        +async ShowErrorAsync(String message) Task
        +async ShowInfoAsync(String message) Task
        +async ShowDiagramInfoAsync(DiagramGenerationResult result, String filePath) Task
    }
    class Diagram3DToolWindow {
    }
    class DiagramGenerationResult {
        +Boolean Success
        +String MermaidDiagram
        +Int32 TypeCount
        +String ProjectPath
        +String SelectedFilePath
        +String ErrorMessage
        +static SuccessResult(String mermaidDiagram, Int32 typeCount, String projectPath, String selectedFilePath) DiagramGenerationResult
        +static Failure(String errorMessage) DiagramGenerationResult
    }
    class GenerateMermaidCommand {
        +static GenerateMermaidCommand Instance
        +static async InitializeAsync(AsyncPackage package) Task
    }
    class Diagram3DToolWindowControl {
        +InitializeComponent() Void
    }
    class ClassDiagramPackage {
        +static const String PackageGuidString
    }
    class ProjectAnalyzer {
        +async AnalyzeProjectAsync(Project project) Task
        +async AnalyzeDocumentAsync(Document document) Task
    }
    class Diagram3DToolWindowControl {
        +InitializeComponent() Void
    }
    class ClassDiagramOptions {
        +Boolean IncludeFields
        +Boolean IncludeProperties
        +Boolean IncludeMethods
        +Boolean IncludePrivateMembers
        +Boolean ShowMethodParameters
        +Boolean ShowPropertyAccessors
        +Boolean ShowCompositionRelationships
        +List IncludedNamespaces
        +List ExcludedNamespaces
    }
    IDiagramGenerationService <|.. DiagramGenerationService
    DiagramGenerationService --> WorkspaceService
    DiagramGenerationService --> ProjectAnalyzer
    DiagramGenerationService --> MermaidGenerator
    MermaidGenerator --> ClassDiagramOptions
    IFileService <|.. FileService
    IDialogService <|.. DialogService
    GenerateMermaidCommand --> IDialogService
    GenerateMermaidCommand --> IDiagramGenerationService
    GenerateMermaidCommand --> IFileService
